--- a/public/js/app/cargaLectiva/views/asignarcarga.html
+++ b/public/js/app/cargaLectiva/views/asignarcarga.html
@@ -29,7 +29,7 @@
                   <div class="row">  
                     <div class="col-md-2">
                         <label>Ciclos</label>
-                        <select name="grupo" style="text-transform: uppercase" class="form-control" ng-model="ciclo" ng-click="selectPlan()">
+                        <select name="grupo" style="text-transform: uppercase" class="form-control" ng-model="ciclo" ng-click="selectPlan2()">
                           <option value="I">I</option>
                           <option value="II">II</option>
                           <option value="III">III</option>
@@ -50,11 +50,11 @@
                         </select>-->
 
 
-                        <select ng-click="selectPlan()" class="form-control ng-pristine ng-valid ng-touched" name="" ng-model="plan_id" ng-options="item.id as item.codigo for item in planEstudiantil"><option value="0" selected="selected" label="2015-I">2015-I</option></select>
+                        <select ng-click="selectPlan2()" class="form-control ng-pristine ng-valid ng-touched" name="" ng-model="plan_id" ng-options="item.id as item.codigo for item in planEstudiantil"><option value="0" selected="selected" label="2015-I">2015-I</option></select>
                       </div>
                       <div class="col-md-2">
                         <label>Grupo</label>
-                        <select name="grupo" style="text-transform: uppercase" class="form-control" ng-model="grupo">
+                        <select name="grupo" style="text-transform: uppercase" class="form-control" ng-model="grupo" ng-click="selectPlan2()">
                           <option value="A">A</option>
                           <option value="B">B</option>
                         </select>
